feat: decrease, increase Fruit 기본 매개변수 값 추가

--- a/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
+++ b/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
@@ -355,7 +355,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ieh-6D-g1l" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1574.6445497630332" y="73.84615384615384"/>
+            <point key="canvasLocation" x="1617" y="92"/>
         </scene>
     </scenes>
     <resources>
