feat: JuiceMakerViewController Label 연결

--- a/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
+++ b/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
@@ -217,6 +217,13 @@
                     <navigationItem key="navigationItem" title="맛있는 쥬스를 만들어 드려요!" id="Eal-fj-o4N">
                         <barButtonItem key="rightBarButtonItem" title="재고수정" id="C3q-Te-cNT"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="bananaLabel" destination="gvk-pA-Lw5" id="JZN-yp-wKt"/>
+                        <outlet property="kiwilabel" destination="FZq-de-TJG" id="U12-3i-43S"/>
+                        <outlet property="mangoLabel" destination="3Ce-SU-JeH" id="TUx-D0-S6F"/>
+                        <outlet property="pineappleLabel" destination="ccQ-Dk-PuY" id="jCF-ii-HqE"/>
+                        <outlet property="strawberryLabel" destination="Qas-vP-td6" id="Ncv-Sg-3xf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
